Fix tasks' collapsability & minor improvements

--- a/tasks/static/css/sidebar.css
+++ b/tasks/static/css/sidebar.css
@@ -78,10 +78,14 @@ body {
 }
 
 .sidebar-nav li {
-    text-indent: 6px;
+    text-indent: 8px;
     line-height: 40px;
     font-size: 24px;
     display: block;
+}
+
+.sidebar-nav .tab-name {
+    padding-left: 6px;
 }
 
 .sidebar-nav li a {
@@ -142,4 +146,13 @@ body {
         position: relative;
         margin-right: 0;
     }
+}
+
+.login {
+    text-align: center;
+    padding: 8px 14px;
+    border-radius: 5px;
+    font-size: 20px;
+    margin: 5px;
+    margin-top: 600px;
 }
