--- a/tasks/static/css/tasks.css
+++ b/tasks/static/css/tasks.css
@@ -26,6 +26,10 @@
     font-weight: 300;
 }
 
+.integration-btn {
+    border-radius: 5px;
+}
+
 .jira-ticket {
     font-size: 22px;
     font-weight: 400;
@@ -36,4 +40,12 @@
     font-size: 22px;
     font-weight: 400;
     color: #337ab7;
+}
+
+.integration {
+    border-radius: 5px;
+    margin: auto;
+    /*background-color: #80d0e7;*/
+    font-size: 18px;
+    padding: 8px 14px;
 }
